# pypiwrap

./: .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  __init__.py  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.github/workflows/: docs.yml
_sources/: index.rst.txt
_sources/reference/: utils.rst.txt
apis/: __init__.py  _shared.py  data.py  stats.py
docs/source/: conf.py  index.rst
docs/source/guides/: features.rst
docs/source/reference/: client.rst  exceptions.rst  objects.rst  utils.rst
docs/source/reference/objects/: pypi.rst  rss.rst  simple.rst  simple_repo.rst
pypiwrap/: __init__.py  client.py  exceptions.py  objects.py  utils.py
pypiwrap.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pypiwrap/objects/: __init__.py  base.py  pypi.py  simple.py
reference/: client.html  exceptions.html  utils.html
reference/objects/: pypi.html  simple.html
src/pypiwrap/: __init__.py  _version.py  client.py  consts.py  exceptions.py  utils.py
src/pypiwrap/objects/: __init__.py  base.py  pypi.py  rss.py  simple_repo.py
tests/: test_pypi_api.py  test_simple_api.py
tests/data/: pypi_flask.json  pypi_packages.xml  pypi_stats.json  simple_repo_colorama_page.json  simple_repo_index_page.json
