[project]
name = "pypiwrap"
version = "1.0.0"
description = "A simple API wrapper for the Python Package Index"
authors = [
    { name = "Angel Carias" }
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"    
]
dependencies = ["requests"]

[project.urls]
homepage = "https://github.com/aescarias/pypiwrap"
documentation = "https://aescarias.github.io/pypiwrap"

[project.optional-dependencies]
docs = ["Sphinx", "sphinx-design", "furo", "sphinx-copybutton"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
