[project]
name = "pypiwrap"
description = "An API wrapper for the Python Package Index"
authors = [{ name = "Angel Carias", email = "lotta.dev@outlook.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version"]
dependencies = ["requests >= 2.32.0"]

[project.urls]
"Homepage" = "https://github.com/aescarias/pypiwrap"
"Documentation" = "https://aescarias.github.io/pypiwrap"

[project.optional-dependencies]
docs = [
    "Sphinx >= 8.1.0",
    "sphinx-design >= 0.6.0",
    "furo >= 2024.8.6",
    "sphinx-copybutton >= 0.5.2",
]

[tool.setuptools.dynamic]
version = { attr = "pypiwrap._version.__version__" }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
