[metadata]
name = pypiwrap
author = Angel Carias
description = A Python API wrapper for the Python Package Index
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aescarias/pypiwrap
version = 1.0.0
license = MIT
license_files = LICENSE
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    pypiwrap
    pypiwrap.objects
python_requires = >=3.7.0
install_requires =
    requests

[options.extras_require]
docs = Sphinx; sphinx-design; furo; sphinx-copybutton
